--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 body {
     font-family: 'Poppins', sans-serif;
     -webkit-font-smoothing: antialiased;
-    background: #E02B57
+    background: linear-gradient(135deg, #FFBEBE, #E02B57, #610D2B);
 }
 h2 {
     text-align: center;
@@ -76,10 +76,10 @@ h2 {
 /* Modal Content/Box */
 .modal-content {
     background-color: #ffffff;
-    margin: 15% auto; /* 15% from the top and centered */
+    margin: 10% auto; /* 15% from the top and centered */
     padding: 2rem;
     border: 1px solid #888;
-    width: 60%; /* Could be more or less, depending on screen size */
+    width: 45%; /* Could be more or less, depending on screen size */
     border-radius: 0.5rem;
 }
 .modal-content h1 {
@@ -235,3 +235,32 @@ h2 {
     border-bottom: 1px solid #FFBEBE;
     z-index: 2;
 }
+
+/* teste tabela nova */
+
+.tbl-header{
+    background-color: rgba(255,255,255,0.3);
+   }
+  .tbl-content{
+    height:300px;
+    overflow-x:auto;
+    margin-top: 0px;
+    border: 1px solid rgba(255,255,255,0.3);
+  }
+  th{
+    padding: 20px 15px;
+    text-align: left;
+    font-weight: 500;
+    font-size: 12px;
+    color: #000;
+    text-transform: uppercase;
+  }
+  td{
+    padding: 15px;
+    text-align: left;
+    vertical-align:middle;
+    font-weight: 300;
+    font-size: 12px;
+    color: #000;
+    border-bottom: solid 1px rgba(255,255,255,0.1);
+  }
